# phyto-plankton-classification

./: .gitignore  .rclone.conf  Dockerfile  JenkinsConstants.groovy  MANIFEST.in  README.md  ai4-metadata.yml  import pandas as pd.py  metadata.json  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.py  testtt.py  tox._testttini  tox.ini
.codex_tmp_nb_proj/data/dataset_files/: classes.txt  train.txt
.codex_tmp_nb_proj/notebooks/: 1.0-Dataset_exploration.ipynb  1.2-Image_augmentation.ipynb  3.1-Prediction_statistics.ipynb
.sqa/: config.yml
PI10/: VLIZ-Pi-10_processing.py  explore_metrics.py  explore_metrics_SAFE.py  readme.md
data/dataset_files/: classes.txt  test.txt  train.txt  val.txt
docker/: Dockerfile.dev  Dockerfile.tests
docker/jupyter/: jupyter_notebook_config.py
docs/: api_usage.rst  conf.py  index.rst  installation.rst  notebooks.rst  python_usage.rst  quickstart.rst  reference.rst
etc/: config-PI10.yaml  config.yaml  config_zooscan.yaml  demo-config.yaml
models/2025-04-11_220256/conf/: conf.json  conf.txt
models/2025-04-11_220256/predictions/: final_model.h5+DS_split+top5.json
models/2025-04-11_220256/stats/: stats.json
models/2025-04-11_222807/conf/: conf.json  conf.txt
models/2025-04-11_222807/predictions/: final_model.h5+DS_split+top5.json
models/2025-04-11_222807/stats/: stats.json
models/2025-10-21_154558/conf/: conf.json  conf.txt
models/2025-10-21_154558/dataset_files/: classes.txt  test.txt  train.txt  val.txt
models/2025-10-21_154558/predictions/: final_model.h5+DS_split+top5.json
models/2025-10-21_154558/stats/: stats.json
models/Phytoplankton_EfficientNetV2B0/conf/: conf.json
models/Phytoplankton_EfficientNetV2B0/dataset_files/: aphia_ids.txt  test.txt
models/Phytoplankton_EfficientNetV2B0/stats/: stats.json
models/phytoplankton_vliz/conf/: conf.json  conf.txt
models/phytoplankton_vliz/stats/: stats.json
my_project/: config.yaml
my_project/models/Phytoplankton_EfficientNetV2B0/conf/: conf.txt
my_project/notebooks/: 1.0-Dataset_exploration.ipynb  1.1-Image_transformation.ipynb  1.2-Image_augmentation.ipynb  3.0-Computing_predictions.ipynb
myenv/: pyvenv.cfg
notebooks/: 1.0-Dataset_exploration.ipynb  1.1-Image_transformation.ipynb  1.2-Image_augmentation.ipynb  2.0-Model_training.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics copy.ipynb  3.1-Prediction_statistics.ipynb  3.2-Saliency_maps.ipynb  PLOTTING.ipynb  species_sample_counts.csv
nvflare/: Dockerfile  README.md  dockerfile  requirements_nvflare.txt
nvflare/jobs/: split_data.py
nvflare/jobs/FedAvg/: meta.conf
nvflare/jobs/Swarm/: meta.conf
nvflare/simulator_workspace/server/: log.txt
nvflare/simulator_workspace/site-1/: log.txt
nvflare/simulator_workspace/site-2/: log.txt
oscar/: oscar.py  oscar_as.py  oscar_debugging.py  phyto-plankton-classifier.yaml  script.sh
planktonclas/: __main__.py  api.py  api_test.py  cli.py  config.py  config_test.py  data_utils.py  extract_metrics_jonas.py  model_utils.py  optimizers.py  paths.py  plot_utils.py  predict_on_gpu_server.py  predict_pi10.py  predict_pi10_untar.py  predict_pi10_untar_metrics.py  predict_pi10_untar_metrics_varJonas_final_SkipTars.py.py  predict_pi10_untar_metrics_varJonas_final_SkipTarsTime.py  report_utils.py  test_utils.py  train_runfile.py  utils.py  warnings_config.py
planktonclas/resources/: config.yaml
planktonclas/resources/notebooks/: 1.1-Image_transformation.ipynb  1.2-Image_augmentation.ipynb  2.0-Model_training.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics.ipynb  3.2-Saliency_maps.ipynb
planktonclas/visualization/: guided_backprop.py  integrated_gradients.py  saliency.py  visual_backprop.py
references/: README_marketplace.md
testing/notebook_smoke/notebooks/: 1.0-Dataset_exploration.ipynb  1.2-Image_augmentation.ipynb  3.0-Computing_predictions.ipynb  3.1-Prediction_statistics.ipynb  3.2-Saliency_maps.ipynb
tests/: test_api.py
(+27 files in other folders)
