[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "planktonclas"
description = "add api to planktonclas"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Ignacio Heredia (CSIC)", email= "iheredia@ifca.unican.es"} ,{name= "Wout Decrop (VLIZ)", email= "wout.decrop@vliz.be"} ]
#authors-email = ["iheredia@ifca.unican.es", "wout.decrop@vliz.be"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/phyto-plankton-classification.git"
"Bug Tracker" = "https://github.com/ai4os-hub/phyto-plankton-classification/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = ["planktonclas"]



[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
planktonclas = "planktonclas.api"
