[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "planktonclas"
description = "Phytoplankton image classification package with CLI, training, reports, and DEEPaaS API support"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "apache 2.0" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

# Add author and author email here
authors = [{name= "Ignacio Heredia (CSIC)", email= "iheredia@ifca.unican.es"} ,{name= "Wout Decrop (VLIZ)", email= "wout.decrop@vliz.be"} ]
#authors-email = ["iheredia@ifca.unican.es", "wout.decrop@vliz.be"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/phyto-plankton-classification"
"Bug Tracker" = "https://github.com/ai4os-hub/phyto-plankton-classification/issues"
"Documentation" = "https://phyto-plankton-classification.readthedocs.io/"

[project.scripts]
planktonclas = "planktonclas.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/data", "MODELS_PATH=tests/models"]
addopts = "--import-mode=importlib"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["planktonclas*"]

[tool.setuptools.package-data]
planktonclas = [
    "resources/*.yaml",
    "resources/dataset_files/*",
    "resources/notebooks/*.ipynb",
    "resources/demo-images/*/*",
]



[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
planktonclas = "planktonclas.api"
