[metadata]
name = planktonclas
summary = Identify the species level of Plankton for 95 classes. Working on OSCAR
author = Ignacio Heredia (CSIC), Wout Decrop (VLIZ)
author_email = iheredia@ifca.unican.es, wout.decrop@vliz.be
version = 0.1.0
license = Apache-2.0
home_page = https://github.com/ai4os-hub/phyto-plankton-classification
classifiers =
    Intended Audience :: Information Technology
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
packages = planktonclas
install_requires =
    PyYAML
    # add other dependencies here

[entry_points]
deepaas.v2.model =
    planktonclas = planktonclas.api
